# marcus-maths

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
app/src/: CMakeLists.txt  main.c
marcus_maths/: CMakeLists.txt  marcus_maths.cmake
marcus_maths/inc/: marcus_maths.h
marcus_maths/src/: marcus_maths.c
mt_maths/: CMakeLists.txt
mt_maths/inc/: mt_maths.h
mt_maths/src/: mt_maths.c
tests/: CMakeLists.txt
tests/src/: ccode_tests.cpp  hello_tests.cpp  marcus_maths_tests.cpp  mtmaths_tests.cpp
tests/test_me/: test_me.c
tests/test_me/inc/: test_me.h
